--- a/app/views/voca/index.html.erb
+++ b/app/views/voca/index.html.erb
@@ -94,7 +94,7 @@ $(document).ready(function(){
   $(document).on('mousedown', '.view_answer', function(){
     var step = $(this).attr("view_step");
     $('.word_meaning[answer_step="'+step+'"]').show();
-  });$(document).on('vmousedown', '.view_answer', function(){
+  });$(document).on('touchstart', '.view_answer', function(){
     var step = $(this).attr("view_step");
     $('.word_meaning[answer_step="'+step+'"]').show();
   });
